--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,7 +81,7 @@
 
 @layer utilities {
   .animated-gradient {
-    background: linear-gradient(-45deg, #f7971e, #ffd200, #56ccf2);
+    background: linear-gradient(-45deg, #f9ad5f, #ffeb80, #a0e1f7);
     background-size: 400% 400%;
     animation: gradient-animation 15s ease infinite;
   }
